# moonlight

./: README.md  main.py  pyproject.toml
app/: __init__.py  initialaze_widgets.py  widgets_list.py
app/stylesheet/: __init__.py  debounce.py  manager.py
app/stylesheet/scss_compiler/: __init__.py  compiler.py  filters.py  handler.py  watcher.py
app/stylesheet/user_styles/: __init__.py  user_styles.py  user_watch_handler.py  user_watcher.py
config/: config.jsonc  config.yml  schema.json
services/: __init__.py
services/config_reload/: __init__.py  analyzer.py  restarter.py  service.py  watcher.py
services/wayland_ipc/: __init__.py  wayland_ipc_handler.py
services/wayland_ipc/hyprland/: __init__.py  hypr.py  hyprctl.py  main_keyboard.py  monitors.py  windows.py  workspace.py
styles/: main.css  main.css.map  user.css
styles/default_gtk_theme/: default_gtk.css
styles/scss/: import.scss
utils/: __init__.py  application.py  config_reload_handler.py  jsonc_manager.py
utils/configuration_manager/: __init__.py  config_manager.py
utils/constants/: __init__.py  config.py  distributive.py  icons.py  path_handler.py  paths.py  supported_desktops.py  supported_distributive.py  system.py
utils/exceptions/: __init__.py  config_manager_exceptions.py  jsonc_manager_exceptions.py
utils/tools/: __init__.py  anchor_handler.py  define_current_desktop.py  define_desktop_env.py  define_distro.py  merge_dicts.py  paths_handler.py  position_handler.py  simple_namespace.py
widgets/: __init__.py  config.py
widgets/status_bar/: __init__.py  bar.py
(+63 files in other folders)
